Fixes: NB#274279 - 'Current state: Charging only' (§qtn_usb_charging§) alignment and font are incorrect in the USB mode selection dialog
Bug: NB#274279 - 'Current state: Charging only' (§qtn_usb_charging§) alignment and font are incorrect in the USB mode selection dialog
RevBy: TrustMe
Details: Broken due to meegotouch-theme commit df564e879c38d7bf65ce0e18148e864b1e925463

--- a/themes/style/default.css
+++ b/themes/style/default.css
@@ -16,4 +16,11 @@ MWindowStyle {
 #CommonTextFrameInverted {
     margin-left: 0;
     margin-right: 0;
+    padding-top: $MARGIN_LARGE;
+    padding-bottom: $MARGIN_LARGE;
+}                     
+                                  
+#CommonSmallMainIcon {            
+    margin-top: 0;                
+    margin-bottom: 0;             
 }
